--- a/extensions/eda/rulebooks/demo_launch_job_template.yml
+++ b/extensions/eda/rulebooks/demo_launch_job_template.yml
@@ -13,7 +13,7 @@
           fact:
             payload: "{{ event.payload.payload[0] }}"
       - debug:
-          var: facts.payload
+          var: facts
     # - name: Run Job Template
     #   condition: facts.payload
     #   - run_job_template:
