--- a/extensions/eda/rulebooks/demo_launch_job_template.yml
+++ b/extensions/eda/rulebooks/demo_launch_job_template.yml
@@ -6,7 +6,7 @@
         port: "{{ port | default(5555) }}"
         host: 0.0.0.0
   rules:
-    - name: Parse Event
+    - name: Run Job Template
       condition: true
       actions:
       - print_event:
