--- a/extensions/eda/rulebooks/demo_launch_job_template.yml
+++ b/extensions/eda/rulebooks/demo_launch_job_template.yml
@@ -15,5 +15,5 @@
           name: Resolve Demo Event
           organization: Default
           job_args:
-            payload: "{{ event.payload }}"
+            payload: "{{ event }}"
 ...
