--- a/extensions/eda/rulebooks/demo_launch_job_template.yml
+++ b/extensions/eda/rulebooks/demo_launch_job_template.yml
@@ -16,5 +16,5 @@
           organization: Default
           job_args:
             extra_vars:
-              payload: "{{ event.payload.data }}"
+              payload: "{{ event.payload }}"
 ...
