--- a/extensions/eda/rulebooks/test-25-edited.yml
+++ b/extensions/eda/rulebooks/test-25-edited.yml
@@ -4,7 +4,7 @@
     - ansible.eda.webhook:
         host: 0.0.0.0
         port: 5000
-        token: "{{ eda_auth_token }}"
+        # token: "{{ eda_auth_token }}"
   rules:
     - name: Output ServiceNow Information
       condition: event.meta is definied
