--- a/extensions/eda/rulebooks/test-25-edited.yml
+++ b/extensions/eda/rulebooks/test-25-edited.yml
@@ -1,7 +1,8 @@
 - name: Listen for events on a webhook from ServiceNow
   hosts: all
   sources:
-    - ansible.eda.webhook:
+    - name: Listen for alerts from ServiceNow
+      ansible.eda.webhook:
         host: 0.0.0.0
         port: 5000
         token: "{{ eda_auth_token }}"
@@ -9,5 +10,4 @@
     - name: Output ServiceNow Information
       condition: event.meta is defined
       action:
-        print_event:
-          pretty: true
+        debug:
