--- a/playbooks/hello.yml
+++ b/playbooks/hello.yml
@@ -4,6 +4,7 @@
   gather_facts: false
   vars:
     payload: 
+    organization: 
   tasks:
     - name: Print payload
       ansible.builtin.debug:
